# APPFL-SIM

./: .gitignore  ALGORITHM_PLAYBOOK.md  CONFIG_ARGUMENTS.md  CONFIG_GUIDES.md  GALE.o7091815  GALE.o7093072  GALE.o7093073  GALE.o7096209  README.md  SIMULATION_GUIDE.md  data  log  pyproject.toml  run_disc.sh  run_sweep.sh  run_sweep_all.sh  run_ts.sh  run_ucb.sh
appfl_sim/: .gitignore  __init__.py  runner.py
appfl_sim/agent/: __init__.py  client.py  config.py  server.py
appfl_sim/algorithm/: __init__.py
appfl_sim/algorithm/aggregator/: __init__.py  base_aggregator.py  dslints_c_aggregator.py  dslints_r_aggregator.py  dslinucb_c_aggregator.py  dslinucb_r_aggregator.py  dsts_aggregator.py  dsucb_aggregator.py  fedadagrad_aggregator.py  fedadam_aggregator.py  fedasync_aggregator.py  fedavg_aggregator.py  fedavgm_aggregator.py  fedbuff_aggregator.py  fedcompass_aggregator.py  fednova_aggregator.py  fedprox_aggregator.py  fedsb_aggregator.py  fedyogi_aggregator.py  iceadmm_aggregator.py  iiadmm_aggregator.py  scaffold_aggregator.py  swts_aggregator.py  swucb_aggregator.py  vfl_aggregator.py
appfl_sim/algorithm/scheduler/: __init__.py  async_scheduler.py  base_scheduler.py  compass_scheduler.py  dslints_c_scheduler.py  dslints_r_scheduler.py  (+12 more)
appfl_sim/comm/: __init__.py  mpi.py
appfl_sim/datasets/: __init__.py  common.py  customparser.py  externalparser.py  flambyparser.py  hfparser.py  leafparser.py  medmnistparser.py  sklearnparser.py  tffparser.py  torchaudioparser.py  torchtextparser.py  torchvisionparser.py
appfl_sim/loaders/: __init__.py  data.py  model.py
appfl_sim/logger/: client_logger.py  experiment_tracker.py  server_logger.py
appfl_sim/metrics/: __init__.py  manager.py  metricszoo.py
appfl_sim/misc/: config_utils.py  data_utils.py  dist_utils.py  learning_utils.py  logging_utils.py  metrics_utils.py  mpi_utils.py  runtime_utils.py  system_utils.py  utils.py
appfl_sim/models/: __init__.py  danet.py  m5.py  sent140lstm.py  smartmeterlstm.py  stackedgru.py  stackedlstm.py  stackedtransformer.py
commands/: run_cifar100_sweep_001.sh  run_cifar100_sweep_00316.sh  run_cifar100_sweep_01.sh  run_nc_baseline.sh  run_nc_ts_80.sh  run_nc_ts_90.sh  run_nc_ts_95.sh  run_nc_ts_98.sh  run_nc_ts_99.sh  run_nc_ucb_80.sh  run_nc_ucb_90.sh  run_nc_ucb_95.sh  run_nc_ucb_98.sh  run_nc_ucb_99.sh
pseudocodes/: dclints.tex  dclints_round.tex  dclinucb.tex  dclinucb_round.tex  dcts.tex  dcucb.tex
tools/: EXPORT_APPFL_PLUGIN_GUIDE.md  export_appfl_plugin.py  metrics_json_to_csv.py  wandb_sweep_bandit.py
(+512 files in other folders)
