[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appfl"
version = "0.1.0"
description = "APPFL simulation-focused spinoff (MPI-backed)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "APPFL_SIM" }
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "PyYAML>=6.0",
  "omegaconf>=2.3",
  "hydra-core>=1.3",
  "colorama>=0.4.6",
  "scikit-learn>=1.4",
  "transformers>=4.40",
  "datasets>=2.19",
  "timm>=1.0",
  "tensorboard>=2.16",
  "wandb>=0.17"
]

[project.optional-dependencies]
sim = [
  "mpi4py>=3.1",
  "torchvision>=0.16",
  "Pillow>=10.0"
]
data = [
  "torchvision>=0.16",
  "torchtext>=0.6",
  "torchaudio>=2.1",
  "medmnist>=3.0",
  "Pillow>=10.0"
]
flamby = [
  "flamby"
]
tff = [
  "tensorflow_federated; python_version < '3.12'"
]
all = [
  "mpi4py>=3.1",
  "torchvision>=0.16",
  "torchtext>=0.6",
  "torchaudio>=2.1",
  "medmnist>=3.0",
  "Pillow>=10.0",
  "flamby",
  "tensorflow_federated; python_version < '3.12'"
]

[project.scripts]
appfl-sim-mpi = "appfl_sim.runner:main"
appfl-sim = "appfl_sim.runner:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["appfl_sim*"]

[tool.setuptools.package-data]
appfl_sim = ["config/**/*.yaml", "config/**/*.md"]
