[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appfl-sim"
version = "0.1.0"
description = "[APPFL-SIM] Simulation-focused spinoff of APPFL"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Seok-Ju (Adam) Hahn" }
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "torchvision>=0.16",
  "requests>=2.31",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "omegaconf>=2.3",
  "hydra-core>=1.3",
  "colorama>=0.4.6",
  "scikit-learn>=1.4",
  "einops>=0.8",
  "tqdm>=4.66"
]

[project.optional-dependencies]
all = [
  "Pillow>=10.0",
  "tensorboard>=2.16",
  "wandb>=0.17",
  "timm>=1.0",
  "huggingface-hub>=0.24",
  "medmnist>=3.0",
  "torchtext>=0.6",
  "torchaudio>=2.1",
  "datasets>=2.19",
  "transformers>=4.40",
  "tensorflow_federated; python_version < '3.12'"
]

[project.scripts]
appfl-sim = "appfl_sim.runner:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["appfl_sim*"]

[tool.setuptools.package-data]
appfl_sim = ["config/**/*.yaml", "config/**/*.md"]
